# HRMS-Product

./: README.md  pyproject.toml
.github/workflows/: ci.yml
hrms_product/: hooks.py  modules.txt
