[project]
name = "hrms_product"
authors = [
    { name = "Jagadeesan", email = "jagadeesan.a1104@gmail.com"}
]
description = "APP is Based on HRMS Update Version of All Company Related Applications"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
